change the rights adding a settings component